fix: now returning singleton list of role